<resources>
    <string name="app_name">Booking-team22</string>
    <string name="usernameTxt">Username</string>
    <string name="passwordTxt">Password</string>
    <string name="loginTxt">login</string>
    <string name="signupTxt">"Don't have an account?"</string>
    <string name="signupButtonText">"sign up"</string>
    <string name="firstName">"First name"</string>
    <string name="LastName">"Last name"</string>
    <string name="adress">Address</string>
    <string name="messageSignUp">"Beecome a member, sign up!"</string>
    <string name="hello_blank_fragment">"Hello blank fragment"</string>
    <string name="accomodationButton">"View accomodation"</string>
    <string name="title">My account</string>
    <string name="name">Name:</string>
    <string name="myName">Isidora</string>
    <string name="lastName">Last name:</string>
    <string name="myLastName">Aleksic</string>
    <string name="address">Address:</string>
    <string name="myAddress">Novi Sad</string>
    <string name="phoneNumber">Phone number:</string>
    <string name="myPhoneNumber">0691234567</string>
    <string name="username">Username:</string>
    <string name="myUsername">isiiiii_</string>
    <string name="password1">Password:</string>
    <string name="myPassword">isidorajenajlepsa</string>
    <string name="password2">Confirm password:</string>
    <string name="email">Email:</string>
    <string name="myEmail">aleksicisidora@yahoo.com</string>
    <string name="saveChanges">SAVE CHANGES</string>
    <string name="deleteAccount">DELETE ACCOUNT</string>
    <string name="passwordRepeatTxt">Repeat password</string>
    <string name="phone">Phone number</string>
    <string name="detailsOfAccommodation">Details</string>
    <string name="filters">Filters</string>
    <string name="Type">Accommodation type</string>
    <string name="apartment">Apartment</string>
    <string name="motel">Motel\n</string>
    <string name="villa">Villa</string>
    <string name="hotel">Hotel</string>
    <string name="facilities">Facilities</string>
    <string name="romService">Room service</string>
    <string name="pool">Pool</string>
    <string name="restaurant">Restaurant</string>
    <string name="parking">Parking</string>
    <string name="freeWifi">Free WiFi</string>
    <string name="propertyRating">Property rating</string>
    <string name="oneStar">1 star</string>
    <string name="twoStars">2 stars</string>
    <string name="threeStars">3 stars</string>
    <string name="fourStars">4 stars</string>
    <string name="fiveStars">5 stars</string>
    <string name="accommodationName"> Brand New DobHouse in Budapest</string>
    <string name="accommodationDescription"> "DobHouse, situated in the heart of Budapest at 1072 Budapest, Dob utca 46, Hungary, is a shining example of contemporary comfort and style. This brand-new accommodation promises a delightful stay, blending modern amenities with a prime location.

        As you step into DobHouse, you'll be greeted by a sleek and inviting atmosphere. The accommodation features state-of-the-art facilities, ensuring a seamless experience for guests. The well-designed rooms provide a comfortable and relaxing space, equipped with all the necessities for a memorable stay.

        Conveniently located in Budapest, DobHouse offers easy access to the city's vibrant cultural scene, historical landmarks, and lively entertainment. Explore the nearby attractions, immerse yourself in the local culture, and return to DobHouse for a restful night's sleep.

        The address, 1072 Budapest, Dob utca 46, Hungary, places DobHouse in a central and bustling part of the city, allowing guests to enjoy the best of Budapest within arm's reach. Whether you're a business traveler or a tourist seeking a stylish and convenient accommodation, DobHouse is your home away from home.

        Indulge in the charm of Budapest and experience the warmth of DobHouse, where modern luxury meets the rich history of the city."
    </string>
    <string name="availableAmenities"> Available amenities</string>
    <string name="view_reservation">View reservation</string>
    <string name="cancel">Cancel\n</string>
    <string name="rating">Rating\n</string>
    <string name="Accepted">Accepted\n</string>
    <string name="Cancelled">Cancelled</string>
    <string name="Waiting">Waiting</string>
    <string name="status">Request status</string>
</resources>