<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp" />

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/account_picture"
            android:scaleType="centerCrop"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/title"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/name_label"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:text="@string/name"
            android:textSize="18sp"
            android:layout_alignParentStart="true"
            android:layout_below="@id/profile_image"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:inputType="text"
            android:text="@string/myName"
            android:layout_below="@id/name_label"
            android:layout_alignStart="@id/name_label"
            android:layout_alignEnd="@id/name_label"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/lastName_label"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/lastName"
            android:textAlignment="center"
            android:textSize="18sp"
            android:layout_alignParentStart="true"
            android:layout_below="@id/name"
            android:layout_marginTop="8dp" />

        <EditText
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:textAlignment="center"
            android:text="@string/myLastName"
            android:layout_below="@id/lastName_label"
            android:layout_alignStart="@id/lastName_label"
            android:layout_alignEnd="@id/lastName_label"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/address_label"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/address"
            android:textAlignment="center"
            android:textSize="18sp"
            android:layout_below="@id/lastName"
            android:layout_alignStart="@id/lastName_label"
            android:layout_alignEnd="@id/lastName_label"
            android:layout_marginTop="8dp" />

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:inputType="text"
            android:text="@string/myAddress"
            android:textSize="18sp"
            android:layout_below="@id/address_label"
            android:layout_alignStart="@id/lastName_label"
            android:layout_alignEnd="@id/lastName_label"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/phoneNumber_label"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/phoneNumber"
            android:textAlignment="center"
            android:textSize="18sp"
            android:layout_below="@id/address"
            android:layout_alignStart="@id/address_label"
            android:layout_alignEnd="@id/address_label"
            android:layout_marginTop="8dp" />

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:inputType="number"
            android:text="@string/myPhoneNumber"
            android:textSize="18sp"
            android:layout_below="@id/phoneNumber_label"
            android:layout_alignStart="@id/address_label"
            android:layout_alignEnd="@id/address_label"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/email_label"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/email"
            android:textAlignment="center"
            android:textSize="18sp"
            android:layout_below="@id/phoneNumber"
            android:layout_alignStart="@id/address_label"
            android:layout_alignEnd="@id/address_label"
            android:layout_marginTop="8dp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:inputType="textEmailAddress"
            android:text="@string/myEmail"
            android:textSize="18sp"
            android:layout_below="@id/email_label"
            android:layout_alignStart="@id/address_label"
            android:layout_alignEnd="@id/address_label"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/password_label"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/password1"
            android:textAlignment="center"
            android:textSize="18sp"
            android:layout_below="@id/email"
            android:layout_alignStart="@id/address_label"
            android:layout_alignEnd="@id/address_label"
            android:layout_marginTop="8dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:inputType="textPassword"
            android:text="@string/myPassword"
            android:textSize="18sp"
            android:layout_below="@id/password_label"
            android:layout_alignStart="@id/address_label"
            android:layout_alignEnd="@id/address_label"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/password1_label"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/password2"
            android:textAlignment="center"
            android:textSize="18sp"
            android:layout_below="@id/password"
            android:layout_alignStart="@id/address_label"
            android:layout_alignEnd="@id/address_label"
            android:layout_marginTop="8dp" />

        <EditText
            android:id="@+id/password1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:inputType="textPassword"
            android:text="@string/myPassword"
            android:textSize="18sp"
            android:layout_below="@id/password1_label"
            android:layout_alignStart="@id/address_label"
            android:layout_alignEnd="@id/address_label"
            android:layout_marginTop="8dp" />

        <Button
            android:id="@+id/save_changes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/saveChanges"
            android:layout_below="@id/password1"
            android:layout_alignStart="@id/address_label"
            android:layout_alignEnd="@id/address_label"
            android:layout_marginTop="8dp" />

        <!-- Second Button -->
        <Button
            android:id="@+id/delete_account"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/deleteAccount"
            android:layout_below="@id/save_changes"
            android:layout_alignStart="@id/address_label"
            android:layout_alignEnd="@id/address_label"
            android:layout_marginTop="8dp" />
    </RelativeLayout>
</ScrollView>
