<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkPurple"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/roundcorner"
        android:orientation="vertical"
        android:backgroundTint="@color/purple">

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/messageTxt"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="21dp"
                android:text="@string/messageSignUp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/emailTxt"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/usernameField"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/black" />

            <TextView
                android:id="@+id/passwordTxt"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="20dp"
                android:text="@string/passwordTxt"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/passwordField"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginLeft="22dp"
                android:layout_marginRight="22dp"
                android:inputType="textPassword"
                android:textColorHint="@color/black" />

            <TextView
                android:id="@+id/passwordRepeatTxt"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/passwordRepeatTxt"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/passwordRepeatField"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:inputType="textPassword"
                android:textColorHint="@color/black" />

            <TextView
                android:id="@+id/fullNameTxt"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="20dp"
                android:text="@string/firstName"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/firstNameField"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:inputType="textPassword"
                android:textColorHint="@color/black" />

            <TextView
                android:id="@+id/lastNameTxt"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/LastName"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/lastNameField"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:inputType="textPassword"
                android:textColorHint="@color/black" />

            <TextView
                android:id="@+id/adressTxt"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/address"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/adressField"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:inputType="text"
                android:textColorHint="@color/black" />

            <TextView
                android:id="@+id/phoneTxt"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/phone"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/phoneField"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:inputType="text"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="2dp"
                android:gravity="center">
                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="130dp"
                    android:layout_height="55dp"
                    android:layout_marginBottom="20dp"
                    android:backgroundTint="@color/purple"
                    android:text="@string/signupButtonText"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:strokeColor="@color/grey"
                    app:strokeWidth="0.6dp" />
            </LinearLayout>
        </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>
