<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:background="@color/darkPurple"
        tools:context=".activities.LoginActivity">


        <RelativeLayout
            android:layout_width="355dp"
            android:layout_height="660dp"
            android:layout_centerInParent="true"
            android:background="@drawable/roundcorner"
            android:backgroundTint="@color/purple">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/logo"
                android:layout_marginBottom="10dp"
                tools:layout_editor_absoluteX="48dp"
                tools:layout_editor_absoluteY="155dp" />

            <TextView
                android:id="@+id/usernameTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/logo"
                android:layout_marginStart="24dp"
                android:layout_marginBottom="10dp"
                android:text="@string/usernameTxt"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/usernameField"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_below="@id/usernameTxt"
                android:layout_marginLeft="22dp"
                android:layout_marginRight="22dp"
                android:layout_marginBottom="30dp"
                android:inputType="text"
                android:textColorHint="@color/black" />

            <TextView
                android:id="@+id/passwordTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/usernameField"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/passwordTxt"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/passwordField"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_below="@id/passwordTxt"
                android:layout_marginLeft="22dp"
                android:layout_marginRight="22dp"
                android:inputType="textPassword"
                android:textColorHint="@color/black" />

            <TextView
                android:id="@+id/forgotPasswordTxt"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_below="@id/passwordField"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="20dp"
                android:gravity="right"
                android:layout_marginBottom="37dp"
                android:text="@string/forgot_password"
                android:textColor="@color/black"
                android:textSize="11sp" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_below="@id/forgotPasswordTxt"
                android:layout_centerInParent="true"
                android:layout_marginBottom="30dp"
                android:backgroundTint="@color/purple"
                android:text="@string/loginTxt"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:strokeColor="@color/grey"
                app:strokeWidth="0.6dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/loginButton"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/signupTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="25dp"
                    android:text="@string/signupTxt" />

                <Button
                    android:id="@+id/signupButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:backgroundTint="@color/purple"
                    android:text="@string/signupButtonText"
                    android:textColor="@color/black" />
            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>
</ScrollView>